--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -5,6 +5,11 @@ pipeline {
             args '-v /root/.m2:/root/.m2'
         }
     }
+    environment {
+        AWS_REGION = 'us-east-2'  // Specify your AWS region
+        S3_BUCKET = 'nishdevopsjouney'  // Replace with your S3 bucket name
+        AWS_CREDENTIALS_ID = 'aws-credentials-id'  // AWS credentials ID stored in Jenkins
+    }
     stages {
         stage('Build') {
             steps {
@@ -24,6 +29,18 @@ pipeline {
         stage('Deliver') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
+            }
+        }
+        stage('Upload to S3') {  // New stage to upload to S3
+            steps {
+                withCredentials([[
+                    $class: 'AmazonWebServicesCredentialsBinding', 
+                    credentialsId: "${AWS_CREDENTIALS_ID}"
+                ]]) {
+                    sh '''
+                    aws s3 cp target/my-app-1.0-SNAPSHOT.jar s3://${S3_BUCKET}/my-app-1.0-SNAPSHOT.jar --region ${AWS_REGION}
+                    '''
+                }
             }
         }
     }
